--- a/src/components/TiltedCard.css
+++ b/src/components/TiltedCard.css
@@ -30,6 +30,20 @@
     position: relative;
     transform-style: preserve-3d;
   }
+
+  .tilted-card-inner::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    z-index: 1;
+    pointer-events: none;
+    transform: translateZ(15px);
+  }
   
   .tilted-card-img {
     position: absolute;
@@ -45,6 +59,12 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding-top: 1.5rem;
     z-index: 2;
     will-change: transform;
     transform: translateZ(30px);
