--- a/src/pages/aboutus.css
+++ b/src/pages/aboutus.css
@@ -1,6 +1,7 @@
 .aboutus-page-container {
   min-height: 100vh;
   padding: 0;
+  margin-top: 60px;
   background-color: #ffffff;
   box-sizing: border-box;
   overflow-x: hidden;
